src/test/ui/issues/issue-15381.stderr
error[E0005]: refutable pattern in `for` loop binding: `&[]` not covered
  --> $DIR/issue-15381.rs:4:9
   |
LL |     for &[x,y,z] in values.chunks(3).filter(|&xs| xs.len() == 3) {
   |         ^^^^^^^^ pattern `&[]` not covered

warning[E0381]: borrow of possibly uninitialized variable: `y`
  --> $DIR/issue-15381.rs:6:26
   |
LL |         println!("y={}", y);
   |                          ^ use of possibly uninitialized `y`
   |
   = warning: this error has been downgraded to a warning for backwards compatibility with previous releases
   = warning: this represents potential undefined behavior in your code and this warning will become a hard error in the future
   = note: for more information, try `rustc --explain E0729`

error: aborting due to previous error

Some errors have detailed explanations: E0005, E0381.
For more information about an error, try `rustc --explain E0005`.
